src/macros.h

int ada_ctype (void);

int ada_collate (void);

int ada_monetary (void);

int ada_numeric (void);

int ada_time (void);

int ada_messages (void);

int ada_all (void);